# onvif-viewer

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
docs/: ONVIF-RTSP-Viewer-Tauri-Dev.md
release/windows-msi/: ONVIF Viewer_1.2.0_x64_en-US.msi
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_server.rs  lib.rs  main.rs
src-tauri/src/streaming/: decoder.rs  mod.rs  renderer.rs  rtsp_client.rs
src/components/: HevcPlayer.vue
src/styles/: main.css
