[package]
name = "onvif-viewer"
version = "1.0.0"
description = "ONVIF/RTSP Video Viewer"
authors = [""]
edition = "2021"

[lib]
name = "onvif_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onvif-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
log = "0.4"
dirs = "5"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
