[package]
name = "onvif-viewer"
version = "1.1.0"
description = "ONVIF/RTSP Video Viewer"
authors = [""]
edition = "2021"

[lib]
name = "onvif_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onvif-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "5"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
